Creating 1st page, problems with fonts

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,8 +1,39 @@
 <!DOCTYPE html>
 html(lang="en")
     head
+        link(rel="stylesheet", href="fonts.css")
+        link(rel="stylesheet", href="fonts2.css")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
     body
-    include ../includes/emblem
+    .colorsandtype
+     include ../includes/emblem
+     .colors
+      .Rectangle1
+      .Rectangle2
+      .Rectangle3
+      .Rectangle4
+      .Rectangle5
+      .Rectangle6
+      .Rectangle7
+     .colorDef
+      .def1 
+        p Dark Shade 100%<br>#1F2041
+      .def2
+      .def3
+      .def4
+      .def5
+      .def6
+      .def7
+      
+      
+    //-  ul.colors
+    //-   li
+    //-    include ../includes/colorDefine
+    //-   li.darkShade75
+    //-   li.darkShade50
+    //-   li.darkShade25
+    //-   li.darkShade5
+    //-   li.purple
+    //-   li.green
