Doing colors block

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 html(lang="en")
-    head
-        link(rel="stylesheet", href="fonts.css")
-        link(rel="stylesheet", href="fonts2.css")
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body
-    .colorsandtype
-     include ../includes/emblem
-     .colors
-      .Rectangle1
-      .Rectangle2
-      .Rectangle3
-      .Rectangle4
-      .Rectangle5
-      .Rectangle6
-      .Rectangle7
-     .colorDef
-      .def1 
-        p Dark Shade 100%<br>#1F2041
-      .def2
-      .def3
-      .def4
-      .def5
-      .def6
-      .def7
-      
-      
-    //-  ul.colors
-    //-   li
-    //-    include ../includes/colorDefine
-    //-   li.darkShade75
-    //-   li.darkShade50
-    //-   li.darkShade25
-    //-   li.darkShade5
-    //-   li.purple
-    //-   li.green
+	head
+		link(rel="stylesheet", href="fonts.css")
+		link(rel="stylesheet", href="fonts2.css")
+		meta(charset="UTF-8")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		title Document
+	body
+		.colorsandtype
+			include ../includes/emblem
+			.colors
+				.Rectangle1
+				.Rectangle2
+				.Rectangle3
+				.Rectangle4
+				.Rectangle5
+				.Rectangle6
+				.Rectangle7
+				.def1
+					p Dark Shade 100%<br><span>#1F2041
+				.def2
+					p Dark Shade 75%<br><span>#1F2041
+				.def3
+					p Dark Shade 50%<br><span>#1F2041
+				.def4
+					p Dark Shade 25%<br><span>#1F2041
+				.def5
+					p Dark Shade 5%<br><span>#1F2041
+				.def6
+					p Purple<br><span>#BC9Cff
+				.def7
+					p Green<br><span>#6FCF97
+		//-  ul.colors
+		//-   li
+		//-    include ../includes/colorDefine
+		//-   li.darkShade75
+		//-   li.darkShade50
+		//-   li.darkShade25
+		//-   li.darkShade5
+		//-   li.purple
+		//-   li.green
