--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,9 @@
     body {
     background: #E5E5E5;
     }
-    
+    span {
+        font-weight: normal;
+    }
     .colorsandtype {
     position: absolute;
     width: 1440px;
@@ -56,8 +58,8 @@
     position: absolute;
     width: 269.26px;
     height: 610px;
-    left: 148px;
-    top: 143px;
+    left: 149.74px;
+    top: 145px;
     }
      
     .Rectangle1{
@@ -131,14 +133,28 @@
     }
 
     .def1 {
-        position: absolute;
-width: 159px;
+    position: absolute;
+    width: 159px;
+    height: 57px;
+    left: 110.26px;
+    top: 7px;
+    font-family: Quicksand;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    color: #1F2041;
+    }
+
+    .def2 {
+position: absolute;
+width: 150px;
 height: 57px;
-left: 260px;
-top: 152px;
-
+left: 110.26px;
+top: 97px;
 font-family: Quicksand;
-
 font-style: normal;
 font-weight: bold;
 font-size: 19px;
@@ -147,6 +163,7 @@ display: flex;
 align-items: center;
 
 /* Dark 100% */
-
 color: #1F2041;
-    }
+
+        }
+    
