Finished Colors&Type page

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,7 +2,6 @@
 html(lang="en")
 	head
 		link(rel="stylesheet", href="fonts.css")
-		link(rel="stylesheet", href="fonts2.css")
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title Document
@@ -28,9 +27,18 @@ html(lang="en")
 				.def5
 					p Dark Shade 5%<br><span>#1F2041
 				.def6
-					p Purple<br><span>#BC9Cff
+					p Purple<br><span>#BC9CFF
 				.def7
 					p Green<br><span>#6FCF97
+			.headersDef
+				.headersDef__h1 H1
+				.headersDef__h2 H2
+				.headersDef__h3 H3
+				.headersDef__body Body
+				.headersDef__h1Text This one is the sub-section or widget title
+				.headersDef__h2Text Next one is the item title inside widgets
+				.headersDef__h3Text This is a label or CTA text
+				.headersDef__bodyText This is the body text which is used for most of the design, like paragraphs, lists, etc.
 		//-  ul.colors
 		//-   li
 		//-    include ../includes/colorDefine
