--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
 html(lang="en")
 	head
-		link(rel="stylesheet", href="fonts.css")
 		meta(charset="UTF-8")
+		link(rel="stylesheet", href="app.css")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title Document
 	body
-		.colorsandtype
-			include ../includes/emblem
-			.colors
-				.Rectangle1
-				.Rectangle2
-				.Rectangle3
-				.Rectangle4
-				.Rectangle5
-				.Rectangle6
-				.Rectangle7
-				.def1
-					p Dark Shade 100%<br><span>#1F2041
-				.def2
-					p Dark Shade 75%<br><span>#1F2041
-				.def3
-					p Dark Shade 50%<br><span>#1F2041
-				.def4
-					p Dark Shade 25%<br><span>#1F2041
-				.def5
-					p Dark Shade 5%<br><span>#1F2041
-				.def6
-					p Purple<br><span>#BC9CFF
-				.def7
-					p Green<br><span>#6FCF97
-			.headersDef
-				.headersDef__h1 H1
-				.headersDef__h2 H2
-				.headersDef__h3 H3
-				.headersDef__body Body
-				.headersDef__h1Text This one is the sub-section or widget title
-				.headersDef__h2Text Next one is the item title inside widgets
-				.headersDef__h3Text This is a label or CTA text
-				.headersDef__bodyText This is the body text which is used for most of the design, like paragraphs, lists, etc.
-		//-  ul.colors
-		//-   li
-		//-    include ../includes/colorDefine
-		//-   li.darkShade75
-		//-   li.darkShade50
-		//-   li.darkShade25
-		//-   li.darkShade5
-		//-   li.purple
-		//-   li.green
+		.headers-and-footers
+			.headers-and-footers__emblem.emblem
+				<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M23.9989 32.4712C23.2224 32.4712 22.5871 31.8359 22.5871 31.0594C22.5871 25.6241 18.14 21.177 12.7047 21.177C11.9283 21.177 11.293 20.5418 11.293 19.7653C11.293 18.9888 11.9283 18.3535 12.7047 18.3535C19.7283 18.3535 25.4106 24.0359 25.4106 31.0594C25.4106 31.8359 24.7753 32.4712 23.9989 32.4712Z" fill="#1F2041" fill-opacity="0.25"/>
+				<path d="M36.7068 19.7653C36.7068 20.5418 36.0715 21.177 35.295 21.177C31.9421 21.177 28.9421 22.8712 27.1774 25.4476C26.7892 24.4594 26.3303 23.5418 25.7656 22.6947C28.095 20.0123 31.5186 18.3535 35.295 18.3535C36.0715 18.3535 36.7068 18.9888 36.7068 19.7653Z" fill="#1F2041" fill-opacity="0.25"/>
+				<path d="M24 48C10.7647 48 0 37.2353 0 24C0 10.7647 10.7647 0 24 0C37.2353 0 48 10.7647 48 24C48 37.2353 37.2353 48 24 48ZM24 2.82353C12.3176 2.82353 2.82353 12.3176 2.82353 24C2.82353 35.6824 12.3176 45.1765 24 45.1765C35.6824 45.1765 45.1765 35.6824 45.1765 24C45.1765 12.3176 35.6824 2.82353 24 2.82353Z" fill="#1F2041" fill-opacity="0.25"/>
+				</svg>
+			.headers-and-footers__Standart-Nav-Bar.Standart-Nav-Bar
+				.Standart-Nav-Bar__body
+				.Standart-Nav-Bar__logo.logo
+					.logo__emblem.emblem
+						<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M20.0003 27.0587C19.3533 27.0587 18.8239 26.5292 18.8239 25.8822C18.8239 21.3528 15.118 17.6469 10.5886 17.6469C9.94152 17.6469 9.41211 17.1175 9.41211 16.4704C9.41211 15.8234 9.94152 15.2939 10.5886 15.2939C16.4415 15.2939 21.1768 20.0292 21.1768 25.8822C21.1768 26.5292 20.6474 27.0587 20.0003 27.0587Z" fill="url(#paint0_linear)"/>
+						<path d="M30.5884 16.4704C30.5884 17.1175 30.0589 17.6469 29.4119 17.6469C26.6178 17.6469 24.1178 19.0587 22.6472 21.2057C22.3236 20.3822 21.9413 19.6175 21.4707 18.9116C23.4119 16.6763 26.2648 15.2939 29.4119 15.2939C30.0589 15.2939 30.5884 15.8234 30.5884 16.4704Z" fill="url(#paint1_linear)"/>
+						<path d="M20 40C8.97059 40 0 31.0294 0 20C0 8.97059 8.97059 0 20 0C31.0294 0 40 8.97059 40 20C40 31.0294 31.0294 40 20 40ZM20 2.35294C10.2647 2.35294 2.35294 10.2647 2.35294 20C2.35294 29.7353 10.2647 37.6471 20 37.6471C29.7353 37.6471 37.6471 29.7353 37.6471 20C37.6471 10.2647 29.7353 2.35294 20 2.35294Z" fill="url(#paint2_linear)"/>
+						<defs>
+						<linearGradient id="paint0_linear" x1="15.2945" y1="15.2939" x2="15.2945" y2="27.0587" gradientUnits="userSpaceOnUse">
+						<stop stop-color="#BC9CFF"/>
+						<stop offset="1" stop-color="#8BA4F9"/>
+						</linearGradient>
+						<linearGradient id="paint1_linear" x1="26.0295" y1="15.2939" x2="26.0295" y2="21.2057" gradientUnits="userSpaceOnUse">
+						<stop stop-color="#6FCF97"/>
+						<stop offset="1" stop-color="#66D2EA"/>
+						</linearGradient>
+						<linearGradient id="paint2_linear" x1="20" y1="0" x2="20" y2="40" gradientUnits="userSpaceOnUse">
+						<stop stop-color="#BC9CFF"/>
+						<stop offset="1" stop-color="#8BA4F9"/>
+						</linearGradient>
+						</defs>
+						</svg>
+					.logo__title
+				nav.Standart-Nav-Bar__menu.menu
+				.Standart-Nav-Bar__button-default.button-default
+				.Standart-Nav-Bar__button-white.button-white
+			.headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
+				.Standart-Logged-In-Nav-Bar__body
+				.Standart-Logged-In-Nav-Bar__logo.logo
+				nav.Standart-Logged-In-Nav-Bar__menu.menu
+				.Standart-Logged-In-Nav-Bar__user.user
+			.headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
+			.headers-and-footers__Footer-Creative.Footer-Creative
