--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,14 +9,11 @@ html(lang="en")
 	body
 		.headers-and-footers
 			.headers-and-footers__emblem.emblem
-				include ../Blocks/emblem/emblem.pug
-			.headers-and-footers__Standrt-Nav-Bar.Standart-Nav-Bar
-				include ../Blocks/Standart Nav Bar/Standart Nav Bar
+				include ../Blocks/emblem/emblem
+			.headers-and-footers__Standart-Nav-Bar.Standart-Nav-Bar
+				include ../Blocks/Standart-Nav-Bar/Standart Nav Bar
 			.headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
-				.Standart-Logged-In-Nav-Bar__body
-				.Standart-Logged-In-Nav-Bar__logo.logo
-				nav.Standart-Logged-In-Nav-Bar__menu.menu
-				.Standart-Logged-In-Nav-Bar__user.user
+				
 			.headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
 				.Footer-Widgets-and-Copyright-Bar__logo-text.logo-text
 				.Footer-Widgets-and-Copyright-Bar__navigation-menu.navigation-menu
