--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -453,132 +453,102 @@ left: 979px;
 top: 231px;
 
 }
+@import '../pug/Blocks/button-default/button-default';
+
+@import '../pug/Blocks/button-else/button-else.scss';
+
+@import '../pug/Blocks/emblem/emblem.scss';
+@import '../pug/Blocks/emblem-default/emblem-default.scss';
+@import '../pug/Blocks/header-menu/header-menu.scss';
+@import '../pug/Blocks/logo/logo.scss';
+@import '../pug/Blocks/Standart-Nav-Bar/Standart-Nav-Bar';
+
 
 
 .headers-and-footers {
+position: relative;
+width: 1440px;
+height: 1350px;
+background: #F4F4F6;
+
+    &__emblem {
+    }
 
     &__Standart-Nav-Bar {
-        position: absolute;
+position: absolute;
 width: 1440px;
 height: 70px;
 left: 0px;
 top: 150px;
     }
-    
+
+    &__Standart-Logged-In-Nav-Bar {
+    }
+
+    &__Footer-Widgets-and-Copyright-Bar {
+    }
+
+    &__Footer-Creative {
+    }
 }
-.Standart-Nav-Bar {
+
+
+
+
+
+
+
+
+
+.Standart-Logged-In-Nav-Bar {
 
     &__body {
-        position: absolute;
-width: 1440px;
-height: 70px;
-
-
-background: #FFFFFF;
-box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     }
 
     &__logo {
-        position: absolute;
-width: 105.69px;
-height: 40px;
-left: 140px;
-top: 15px;
-
     }
 
     &__menu {
-        position: absolute;
-width: 527px;
-height: 21px;
-left: 543px;
-top: 26px;
-border: solid 1px black;
-
     }
 
-    &__button-default {
-        position: absolute;
-width: 101px;
-height: 34px;
-left: 1199px;
-top: 18px;
-
-/* Primary Gradient */
-
-background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-border-radius: 22px;
-    }
-
-    &__button-white {
-        position: absolute;
-width: 79px;
-height: 34px;
-left: 1100px;
-top: 18px;
-
-border-radius: 22px;
+    &__user {
     }
 }
-.logo {
-
-    &__emblem {
-        position: absolute;
-width: 40px;
-height: 40px;
-left: 0px;
-top: 0px;
-
-
-    }
-
-    &__title {
-        position: absolute;
-width: 53.19px;
-height: 12.95px;
-left: 52.5px;
-top: 13.33px;
-
-/* Dark 100% */
-
-
-    }
-}
-.emblem {
-}
-
 .menu {
+}
+.user {
+}
+.Footer-Widgets-and-Copyright-Bar {
 
-    &__menu-list {
-        
-        
-        border: solid 1px black;
+    &__logo-text {
     }
 
-    &__item {
-        display: inline;
+    &__navigation-menu {
     }
 
-    &__item--active {
+    &__about-us-menu {
+    }
+
+    &__support-menu {
+    }
+
+    &__subscribe {
+    }
+
+    &__copyrite-bar {
     }
 }
-
-.button-default {
-
-    &__body {
-    }
-
-    &__text {
-    }
+.logo-text {
 }
-.button-white {
-
-    &__border {
-    }
-
-    &__body {
-    }
-
-    &__text {
-    }
+.navigation-menu {
+}
+.about-us-menu {
+}
+.support-menu {
+}
+.subscribe {
+}
+.copyrite-bar {
+}
+.Footer-Creative {
 }
