Finished 2nd header

--- a/src/pug/Blocks/button-default/_button-default.scss
+++ b/src/pug/Blocks/button-default/_button-default.scss
@@ -29,3 +29,17 @@ text-transform: uppercase;
 color: #FFFFFF;
    }
 }
+
+.headers-and-footers {
+
+   &__Standart-Logged-In-Nav-Bar {
+      position: absolute;
+width: 1440px;
+height: 70px;
+left: 0px;
+top: 260px;
+   }
+}
+
+
+
