--- a/src/pug/Blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar.pug
+++ b/src/pug/Blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar.pug
@@ -1,5 +1,7 @@
 .Standart-Logged-In-Nav-Bar__body
-   .Standart-Logged-In-Nav-Bar__logo.logo
-      include ../logo/logo
-   nav.Standart-Logged-In-Nav-Bar__menu.menu
-   .Standart-Logged-In-Nav-Bar__user.user
+	.Standart-Logged-In-Nav-Bar__logo.logo
+		include ../logo/logo
+	nav.Standart-Logged-In-Nav-Bar__header-menu.header-menu
+		include ../header-menu/header-menu
+	.Standart-Logged-In-Nav-Bar__user.user
+		include ../user/user
