--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,6 +4,7 @@ html(lang="en")
 		meta(charset="UTF-8")
 		link(rel="stylesheet", href="reset.css")
 		link(rel="stylesheet", href="app.css")
+		link(rel="stylesheet", href="fonts.css")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title Document
 	body
@@ -13,7 +14,7 @@ html(lang="en")
 			.headers-and-footers__Standart-Nav-Bar.Standart-Nav-Bar
 				include ../Blocks/Standart-Nav-Bar/Standart Nav Bar
 			.headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
-				
+				include ../Blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar
 			.headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
 				.Footer-Widgets-and-Copyright-Bar__logo-text.logo-text
 				.Footer-Widgets-and-Copyright-Bar__navigation-menu.navigation-menu
