--- a/src/blocks/colorsandtype/colorsandtype.scss
+++ b/src/blocks/colorsandtype/colorsandtype.scss
@@ -6,18 +6,18 @@
   height: 610px;
   left: 149.74px;
   top: 145px;
-  border: solid 1px ;
+  // border: solid 1px ;
   display: flex;
   flex-direction: column;
   justify-content:space-between
   }
 
   &__titleMenu {
-  position: absolute;
-  width: 10.94px;
-  height: 7.09px;
-  left: 55.77px;
-  top: 48.35px;
+    position: absolute;
+    width: 403px;
+    height: 321px;
+    left: 846px;
+    top: 145px;
   }
 position: relative;
 width: 1440px;
