--- a/src/blocks/titleMenu/titleMenu.scss
+++ b/src/blocks/titleMenu/titleMenu.scss
@@ -1,5 +1,18 @@
 .titleMenu {
 
   &__titleItem {
+  display: flex;
+  // flex-direction: row;
+  // justify-content: space-between;
+  
+  // border: solid 1px;
   }
+font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 24px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 }
