--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -14,8 +14,8 @@ html(lang="en")
           .colorItem__textColor=text
     mixin title-item(titleItem, text)
       li.titleItem.titleMenu__titleItem
-        .titleItem__title= titleItem
-        .titleItem__text= text
+        div(class='titleItem__title '+'titleItem__title--'+titleItem)= titleItem
+        div(class='titleItem__text '+'titleItem__text--'+titleItem)= text
     .colorsandtype
       include ../blocks/emblem/emblem
       ul.colorsMenu.colorsandtype__colorsMenu
